# iMacMonitorControl

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  bridge.js  index.css  popup-shared.jsx  popup-variations.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  tray.rs
src-tauri/src/backend/: macos.rs  mod.rs  stub.rs  windows.rs
