[package]
name = "imac-monitor-control"
version = "0.1.0"
description = "DDC/CI monitor control — menubar on macOS, system tray on Windows"
authors = ["wizbowes"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri            = { version = "2.11.2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log        = "0.4"
dirs       = "5"
thiserror  = "1"
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Devices_Display",
  "Win32_Graphics_Gdi",
] }

# macOS: m1ddc / IOKit access is via shell plugin (subprocess); no extra crate needed.
